--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,17 +8,17 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="loggedIn">
         <a class="nav-link" routerLink="/admin/applicants">Tutor Applications</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="loggedIn">
         <a class="nav-link" routerLink="/admin/tutors">Tutor Status</a>
       </li>
     </ul>
-    <div class="nav-item" *ngIf="!loggedIn" class="text-info">
+    <div class="nav-item" *ngIf="!loggedIn">
       <a class="nav-link" routerLink="/login">Login</a>
     </div>
-    <div class="nav-item" *ngIf="loggedIn" class="text-info">
+    <div class="nav-item" *ngIf="loggedIn">
       <a class="nav-link" (click)="onLogoutClick()">Logout</a>
     </div>
   </div>
