--- a/src/app/components/admin-tutor-applicant/admin-tutor-applicant.component.css
+++ b/src/app/components/admin-tutor-applicant/admin-tutor-applicant.component.css
@@ -4,7 +4,7 @@ table{
 /* #table1{
     width:100%;
 } */
-#tableHeader th{
+#tableHeader{
   position: -webkit-sticky;
   position: sticky;
   top:0;
