--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <br><br>
-<div class="container">
+<!-- <div class="container">
   <a routerLink="/admin">Learnspace Admin</a>
-</div>
+</div> -->
 
 <br><br><br><br>
   
